Shipping cost calculation work completed. Checkout controller configuration strings externalized.

--- a/XOSkinWebApp/Views/Checkout/Index.cshtml
+++ b/XOSkinWebApp/Views/Checkout/Index.cshtml
@@ -177,6 +177,7 @@ else
     <input type="hidden" asp-for="CalculatedShipping" value="@Model.CalculatedShipping" id="calculated-shipping" />
     <input type="hidden" asp-for="TotalWeightInPounds" value="@Model.TotalWeightInPounds" />
     <input type="hidden" asp-for="ShippedOn" value="@Model.ShippedOn" />
+    <input type="hidden" asp-for="ShipEngineShipmentId" value="@Model.ShipEngineShipmentId" />
   </form>
   <script type="text/javascript">
     $(document).ready(function () {
