--- a/XOSkinWebApp/Views/Checkout/Index.cshtml
+++ b/XOSkinWebApp/Views/Checkout/Index.cshtml
@@ -283,7 +283,7 @@ else
         return true;
       }
 
-      $('credit-card-number').keyup(function () {
+      $('#credit-card-number').keyup(function () {
         creditCardNumberFilled();
       });
 
