--- a/XOSkinWebApp/Views/Orders/Detail.cshtml
+++ b/XOSkinWebApp/Views/Orders/Detail.cshtml
@@ -76,18 +76,19 @@
         <input asp-for="ShippingPostalCode" class="form-control" id="shipping-postal-code" readonly />
       </div>
     </div>
-    <div class="col-sm-4">
-      <div style="text-align: right; margin-right: 40px" class="font-weight-bolder">Order: @Html.Raw("#XO" + (Model.OrderId + 10000))</div>
-      <div style="text-align: right; margin-right: 40px">Carrier: @Html.Raw(Model.CarrierName)</div>
-      <div style="text-align: right; margin-right: 40px">Shipping: @Html.Raw(Model.ShippedOn.ToShortDateString())</div>
-      <div style="text-align: right; margin-right: 40px">Arrival: @Html.Raw(Model.ExpectedToArrive.ToShortDateString())</div>
+    <div class="col-sm-4" style="font-weight: 500; line-height: 1.2; font-size: 1.5rem">
+      <br /><br /><br />
+      <div style="text-align: right; margin-right: 40px">Order: @Html.Raw("#XO" + (Model.OrderId + 10000))</div>
+      <div style="text-align: right; margin-right: 40px">Carrier: <span style="font-weight: 100">@Html.Raw(Model.CarrierName)</span></div>
+      <div style="text-align: right; margin-right: 40px">Shipping: <span style="font-weight: 100">@Html.Raw(Model.ShippedOn.ToShortDateString())</span></div>
+      <div style="text-align: right; margin-right: 40px">Arrival: <span style="font-weight: 100">@Html.Raw(Model.ExpectedToArrive.ToShortDateString())</span></div>
       <br />
-      <div style="text-align: right; margin-right: 40px">Sub-Total: $@Html.Raw(String.Format("{0:0.00}", Model.SubTotal))</div>
-      <div style="text-align: right; margin-right: 40px">Taxes: +$@Html.Raw(String.Format("{0:0.00}", Model.Taxes))</div>
-      <div style="text-align: right; margin-right: 40px">USPS Priority Mail: +$@Html.Raw(String.Format("{0:0.00}", Model.ShippingCharges))</div>
-      <div style="text-align: right; margin-right: 40px">Code Discount: -$@Html.Raw(String.Format("{0:0.00}", Model.CodeDiscount))</div>
-      <div style="text-align: right; margin-right: 40px">Coupon Discount: -$@Html.Raw(String.Format("{0:0.00}", Model.CouponDiscount))</div>
-      <div style="font-weight: bold; text-align: right; margin-right: 40px">Total: $@Html.Raw(String.Format("{0:0.00}", Model.Total))</div>
+      <div style="text-align: right; margin-right: 40px">Sub-Total: <span style="font-weight: 100">$@Html.Raw(String.Format("{0:0.00}", Model.SubTotal))</span></div>
+      <div style="text-align: right; margin-right: 40px">Taxes: <span style="font-weight: 100">+$@Html.Raw(String.Format("{0:0.00}", Model.Taxes))</span></div>
+      <div style="text-align: right; margin-right: 40px">USPS Priority Mail: <span style="font-weight: 100">+$@Html.Raw(String.Format("{0:0.00}", Model.ShippingCharges))</span></div>
+      <div style="text-align: right; margin-right: 40px">Code Discount: <span style="font-weight: 100">-$@Html.Raw(String.Format("{0:0.00}", Model.CodeDiscount))</span></div>
+      <div style="text-align: right; margin-right: 40px">Coupon Discount: <span style="font-weight: 100">-$@Html.Raw(String.Format("{0:0.00}", Model.CouponDiscount))</span></div>
+      <div style="text-align: right; margin-right: 40px">Total: $@Html.Raw(String.Format("{0:0.00}", Model.Total))</div>
     </div>
   </div>
 </div>
