Declined credit transactions incorporated into the UX for checkouts.

--- a/XOSkinWebApp/Views/Checkout/OrderConfirmation.cshtml
+++ b/XOSkinWebApp/Views/Checkout/OrderConfirmation.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-  <h1 class="display-4">Your Order <br />Confirmation</h1>
+  <h1 class="display-4">Thank you for<br />Your Order!</h1>
   @Html.Raw(ViewData["OrderConfirmation.WelcomeText"])
 </div>
 <p>
