--- a/XOSkinWebApp/Views/Checkout/Index.cshtml
+++ b/XOSkinWebApp/Views/Checkout/Index.cshtml
@@ -95,7 +95,7 @@ else
           </div>
         </div>
         <div class="col-sm-4">
-          <div hidden="@(!Model.CalculatedShipping)">
+          <div hidden="@(!Model.CalculatedShippingAndTaxes)">
             <h4>Credit Card</h4>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -110,14 +110,10 @@ else
             </div>
             <div class="form-group">
               <label class="control-label">Expiration Date</label>
-              <input asp-for="CreditCardExpirationDate" class="form-control" type="Month" />
-              <span asp-validation-for="CreditCardExpirationDate" class="text-danger"></span>
+              <input asp-for="CreditCardExpirationDate" class="form-control" type="Month" id="credit-card-expiration-date" />
+              <span class="text-danger" id="val-credit-card-expiration"></span>
             </div>
           </div>
-          @*<div class="form-group">
-            <label id="carrier" class="control-label">Please Choose a Shipping Carrier</label>
-            <select asp-for="SelectedCarrierId" class="form-control" asp-items="ViewBag.Carrier"></select>
-          </div>*@
           <div style="text-align: right; margin-right: 40px"><span style="font-weight: bold">Carrier:  @Html.Raw(Model.CarrierName)</span></div>
           <div style="text-align: right; margin-right: 40px"><span style="font-weight: bold">Shipping:</span> @Html.Raw(Model.ShippedOn.ToShortDateString())</div>
           <div style="text-align: right; margin-right: 40px"><span style="font-weight: bold">Arrival:</span> @Html.Raw(Model.ExpectedToArrive.ToShortDateString())</div>
@@ -130,9 +126,9 @@ else
           <div style="font-weight: bold; text-align: right; margin-right: 40px">Total: $@Html.Raw(String.Format("{0:0.00}", Model.Total))</div>
           <br />
           <div style="text-align: right; margin-right: 40px">
-            <input id="calculate-shipping-cost-button" type="submit" formaction=@Url.Action("CalculateShippingCostAndTaxes") value="Calculate Shipping Cost" class="btn-outline-dark btn" hidden="@(Model.CalculatedShipping)" />
-            <input id="re-calculate-shipping-cost-button" type="submit" formaction=@Url.Action("Index") value="Re-Calculate" class="btn-outline-dark btn" hidden="@(!Model.CalculatedShipping)" />
-            <input id="place-order-button" type="submit" formaction=@Url.Action("PlaceOrder") value="Place Order" class="btn-outline-dark btn" hidden="@(!Model.CalculatedShipping)" />
+            <input id="calculate-shipping-cost-button" type="submit" formaction=@Url.Action("CalculateShippingCostAndTaxes") value="Calculate Shipping Cost" class="btn-outline-dark btn" hidden="@(Model.CalculatedShippingAndTaxes)" />
+            <input id="re-calculate-shipping-cost-button" type="submit" formaction=@Url.Action("Index") value="Correct Address" class="btn-outline-dark btn" hidden="@(!Model.CalculatedShippingAndTaxes)" />
+            <input id="place-order-button" type="submit" formaction=@Url.Action("PlaceOrder") value="Place Order" class="btn-outline-dark btn" hidden="@(!Model.CalculatedShippingAndTaxes)" />
           </div>
         </div>
       </div>
@@ -165,6 +161,7 @@ else
         }
       </tbody>
     </table>
+    <input type="hidden" asp-for="OrderId" value="@Model.OrderId" />
     <input type="hidden" asp-for="SubTotal" value="@Model.SubTotal.ToString()" />
     <input type="hidden" asp-for="Taxes" value="@Model.Taxes.ToString()" />
     <input type="hidden" asp-for="ShippingCharges" value="@Model.ShippingCharges.ToString()" />
@@ -174,10 +171,11 @@ else
     <input type="hidden" asp-for="ExpectedToArrive" value="@Model.ExpectedToArrive" />
     <input type="hidden" asp-for="ShippingCarrier" value="@Model.ShippingCarrier" />
     <input type="hidden" asp-for="CarrierName" value="@Model.CarrierName" />
-    <input type="hidden" asp-for="CalculatedShipping" value="@Model.CalculatedShipping" id="calculated-shipping" />
+    <input type="hidden" asp-for="CalculatedShippingAndTaxes" value="@Model.CalculatedShippingAndTaxes" id="calculated-shipping" />
     <input type="hidden" asp-for="TotalWeightInPounds" value="@Model.TotalWeightInPounds" />
     <input type="hidden" asp-for="ShippedOn" value="@Model.ShippedOn" />
     <input type="hidden" asp-for="ShipEngineShipmentId" value="@Model.ShipEngineShipmentId" />
+    <input type="hidden" asp-for="CardDeclined" value="@Model.CardDeclined" id="card-declined" />
   </form>
   <script type="text/javascript">
     $(document).ready(function () {
@@ -191,6 +189,13 @@ else
       new $.fn.dataTable.Responsive(table, {
         details: true
       });
+
+      if ($('#card-declined').val() == 'True') {
+        $('#val-credit-card-number').html('Credit card transaction declined.<br />Please try another credit card number.');
+        $('#val-credit-card-cvc').html('Please enter a CVC.');
+        $('#val-credit-card-expiration').html('Please enter an expiration date.');
+        $('#credit-card-expiration-date'.val(Date.now()));
+      }
 
       if ($('#same-address').prop('checked')) {
         shippingAddressSame();
@@ -217,8 +222,14 @@ else
               $('#billing-country').attr('readonly', true);
               $('#same-address').attr('disabled', false);
               $('#same-address').attr('readonly', true);
+              $('#card-declined').val(false);
             }
           case 're-calculate-shipping-cost-button':
+            $('#val-credit-card-number').html('');
+            $('#val-credit-card-cvc').html('');
+            $('#val-credit-card-expiration').html('');
+            $('#calculated-shipping').val(false);
+            $('#card-declined').val(false);
             break;
           default:
         }
